@@ -1,5 +1,9 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Add a variety of vector math functions to the Vector class.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Allow algorithms to have spaces and - in their name.
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
